Enabling https and adding UserRestAPI